syntax = "proto3";

package pb;

option go_package = "github.com/mooncorn/dockyard/proto/pb";

service DockyardService {
  rpc StreamCommunication(stream WorkerMessage) returns (stream ControlMessage);
}

// Control to Worker messages
message ControlMessage {
  oneof message {
    Ping ping = 1;
  }
}

// Worker to Control messages
message WorkerMessage {
  oneof message {
    Pong pong = 1;
    WorkerMetadata metadata = 2;
  }
}

// Worker system specifications
message WorkerMetadata {
  string hostname = 1;
  string ip_address = 2;
  int32 cpu_cores = 3;
  int32 ram_mb = 4;
}

// Ping/Pong messages for heartbeat
message Ping {
  int64 timestamp = 1;
}

message Pong {
  int64 timestamp = 1;
  int64 ping_timestamp = 2;
}